# lifesuspend

./: LICENSE  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
assets/: patterns.toml
src/lifesuspend/: cli.py  config.py  daemon.py  ipc.py  life.py  lock.py  overlay.py
systemd/user/: lifesuspend-daemon.service  lifesuspend-idle.service
templates/: config.toml  hypridle.conf
tests/: test_ipc.py  test_life.py
